[gd_scene load_steps=4 format=2]

[ext_resource path="res://src/MainNodeHD.gd" type="Script" id=1]
[ext_resource path="res://src/ServerHD.gd" type="Script" id=2]
[ext_resource path="res://src/TrackHD.tscn" type="PackedScene" id=3]

[node name="MainNode" type="Node"]
script = ExtResource( 1 )

[node name="Server" type="Node" parent="."]
script = ExtResource( 2 )

[node name="ServerTimer" type="Timer" parent="Server"]
autostart = true

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_right = 1366.0
margin_bottom = 768.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Track" parent="HBoxContainer" instance=ExtResource( 3 )]

[node name="ColorRect" type="ColorRect" parent="HBoxContainer"]
margin_right = 960.0
margin_bottom = 768.0
rect_min_size = Vector2( 960, 768 )
size_flags_vertical = 3
color = Color( 0.0627451, 0.517647, 0.603922, 0 )

[node name="ColorRect2" type="ColorRect" parent="HBoxContainer"]
margin_left = 964.0
margin_right = 1362.0
margin_bottom = 768.0
rect_min_size = Vector2( 398, 768 )
size_flags_vertical = 3
color = Color( 0.0627451, 0.517647, 0.603922, 0.313726 )

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/ColorRect2"]
margin_right = 404.0
margin_bottom = 768.0
rect_min_size = Vector2( 404, 768 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="connection_to_client" from="Server" to="." method="_on_Server_connection_to_client"]
